--- a/gmk.yml
+++ b/gmk.yml
@@ -6,7 +6,8 @@
 
 - macros:
     - &pretty
-      format.pretty: tformat:%C(auto,yellow)%h%C(auto,magenta)% G? %C(auto,blue)%>(12,trunc)%ad %C(auto,green)%<(8,trunc)%aN%C(auto,reset)%s%C(auto,magenta) %GK%C(auto,red)% %d %C(auto,reset)
+      format.pretty: tformat:%C(auto,yellow)%h%C(auto,magenta)% G? %C(auto,blue)%>(22,trunc)%ad %C(auto,green)%<(8,trunc)%aN%C(auto,reset)%s%C(auto,magenta) %GK%C(auto,red)% %d %C(auto,reset)
+      log.date: format:%Y-%m-%d %H:%M:%S
     - &signingkey
       user.signingkey: Thierry Delamare (thy) <t.delamare@laposte.net>
     - &thy
