--- a/gmk.yml
+++ b/gmk.yml
@@ -66,3 +66,8 @@
   name: data-users
   version: gmk
   conf: thyepi
+
+- git: git@thydel.github.com:thydel/infra-play-users.git
+  name: play-user
+  version: gmk
+  conf: thydel
